--- a/index.html
+++ b/index.html
@@ -1,38 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Aboreto&family=DynaPuff&family=Edu+VIC+WA+NT+Beginner&family=Lobster&family=Silkscreen&display=swap" rel="stylesheet">
-    <link
-      rel="shortcut icon"
-      type="image/jpg"
-      href="./assets/images/favicon.ico"
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=DynaPuff&family=Edu+VIC+WA+NT+Beginner&family=Lobster&family=Silkscreen&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/jpg" href="./assets/images/favicon.ico" />
 
-    <link rel="stylesheet" src="./assets/css/style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
 
     <title>Team Project 1</title>
-  </head>
+</head>
 
-  <body>
-    <nav class="navbar bg-light pt-3">
-      <div class="container-fluid justify-content-center w-75">
-        <form class="d-flex col-6" role="search">
-          <select
-            class="form-select"
-            id="genrePicker"
-            aria-label="Default select example"
-          >
+<body>
+    <nav class="navbar bg-dark pt-3">
+        <div class="container-fluid justify-content-center w-75">
+            <form class="d-flex col-6" role="search">
+                <select class="form-select" id="genrePicker" aria-label="Default select example">
             <option selected>Please select your movie genre!</option>
             <option value="comedy">Comedy</option>
             <option value="horror">Horror</option>
@@ -40,195 +28,137 @@
             <option value="acttion">Action</option>
             <option value="sci_fi">Sci-fi</option>
           </select>
-          <button
-            class="btn btn-outline-success mx-2"
-            id="submitButton"
-            type="submit"
-          >
+                <button class="btn btn-outline-danger mx-2" id="submitButton" type="submit">
             Search
           </button>
-        </form>
-      </div>
+            </form>
+        </div>
     </nav>
     <main>
-      <section class="text-center py-3" id="intro-page">
-        <h2 id="h2El">Welcome to Our Movie Finder!</h2>
-        <h3 id="h3El">Pick a genre to find a movie and watch the trailer!</h3>
-      </section>
-      <!-- card 1 -->
-      <section id="cardholder" class="row justify-content-center gap-3">
-        <div
-          class="card justify-content-center"
-          style="min-height: 285px; width: 575px"
-        >
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="" class="rounded-start" alt="..." />
+        <section class="text-center py-3" id="intro-page">
+            <h2 id="h2El">Welcome to Our Movie Finder!</h2>
+            <h3 id="h3El">Pick a genre to find a movie and watch the trailer!</h3>
+        </section>
+        <!-- card 1 -->
+        <section id="cardholder" class="row justify-content-center gap-3">
+            <div class="card justify-content-center" style="min-height: 285px; width: 575px">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="" class="rounded-start" alt="..." />
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Movie title</h5>
+                            <p class="card-text">
+                                Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Movie title</h5>
-                <p class="card-text">
-                  Movie Description Lorem ipsum, dolor sit amet consectetur
-                  adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid
-                  assumenda ducimus, suscipit exercitationem eius iusto?
-                </p>
-              </div>
+            <!-- card 2 -->
+            <div class="card justify-content-center" style="min-height: 285px; width: 575px">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="" class="rounded-start" alt="..." />
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Movie title</h5>
+                            <p class="card-text">
+                                Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <!-- card 2 -->
-        <div
-          class="card justify-content-center"
-          style="min-height: 285px; width: 575px"
-        >
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="" class="rounded-start" alt="..." />
+            <!-- card 3 -->
+            <div class="card justify-content-center" style="min-height: 285px; width: 575px">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="" class="rounded-start" alt="..." />
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Movie title</h5>
+                            <p class="card-text">
+                                Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Movie title</h5>
-                <p class="card-text">
-                  Movie Description Lorem ipsum, dolor sit amet consectetur
-                  adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid
-                  assumenda ducimus, suscipit exercitationem eius iusto?
-                </p>
-              </div>
+            <!-- card 4 -->
+            <div class="card justify-content-center" style="min-height: 285px; width: 575px">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="" class="rounded-start" alt="..." />
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Movie title</h5>
+                            <p class="card-text">
+                                Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <!-- card 3 -->
-        <div
-          class="card justify-content-center"
-          style="min-height: 285px; width: 575px"
-        >
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="" class="rounded-start" alt="..." />
+            <!-- card 5 -->
+            <div class="card justify-content-center" style="min-height: 285px; width: 575px">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="" class="rounded-start" alt="..." />
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Movie title</h5>
+                            <p class="card-text">
+                                Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Movie title</h5>
-                <p class="card-text">
-                  Movie Description Lorem ipsum, dolor sit amet consectetur
-                  adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid
-                  assumenda ducimus, suscipit exercitationem eius iusto?
-                </p>
-              </div>
+            <!-- card 6 -->
+            <div class="card justify-content-center" style="min-height: 285px; width: 575px">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="" class="rounded-start" alt="..." />
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Movie title</h5>
+                            <p class="card-text">
+                                Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <!-- card 4 -->
-        <div
-          class="card justify-content-center"
-          style="min-height: 285px; width: 575px"
-        >
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="" class="rounded-start" alt="..." />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Movie title</h5>
-                <p class="card-text">
-                  Movie Description Lorem ipsum, dolor sit amet consectetur
-                  adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid
-                  assumenda ducimus, suscipit exercitationem eius iusto?
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- card 5 -->
-        <div
-          class="card justify-content-center"
-          style="min-height: 285px; width: 575px"
-        >
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="" class="rounded-start" alt="..." />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Movie title</h5>
-                <p class="card-text">
-                  Movie Description Lorem ipsum, dolor sit amet consectetur
-                  adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid
-                  assumenda ducimus, suscipit exercitationem eius iusto?
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- card 6 -->
-        <div
-          class="card justify-content-center"
-          style="min-height: 285px; width: 575px"
-        >
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="" class="rounded-start" alt="..." />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Movie title</h5>
-                <p class="card-text">
-                  Movie Description Lorem ipsum, dolor sit amet consectetur
-                  adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid
-                  assumenda ducimus, suscipit exercitationem eius iusto?
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+        </section>
 
-      <!-- Modal -->
-      <div
-        class="modal fade"
-        id="videoModal"
-        tabindex="-1"
-        aria-labelledby="exampleModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog modal-xl modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Movie Trailer</h5>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
+        <!-- Modal -->
+        <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Movie Trailer</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" <<<<<<< HEAD allowfullscreen=""></iframe></iframe>
+                    </div>
+                    <div class="modal-footer"></div>
+                </div>
             </div>
-            <div class="modal-body">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-<<<<<<< HEAD
-                allowfullscreen=""
-              ></iframe></iframe
-              >
-            </div>
-            <div class="modal-footer"></div>
-          </div>
         </div>
-      </div>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
-  </body>
+</body>
+
 </html>
