--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <form class="d-flex col-6" role="search">
                 <select class="form-select" id="genrePicker" aria-label="Default select example">
             <option selected>Please select your movie genre!</option>
-            <option value="comedy">Comedy</option>
-            <option value="horror">Horror</option>
-            <option value="romance">Romance</option>
-            <option value="acttion">Action</option>
-            <option value="sci_fi">Sci-fi</option>
+            <option value="comedy" id="comedy">Comedy</option>
+            <option value="horror" id="horror">Horror</option>
+            <option value="romance" id="romance">Romance</option>
+            <option value="action" id="action">Action</option>
+            <option value="sci_fi" id="scifi">Sci-fi</option>
           </select>
                 <button class="btn btn-outline-danger mx-2" id="submitButton" type="submit">
             Search
@@ -41,7 +41,7 @@
         </section>
         <!-- card 1 -->
         <section id="cardholder" class="row justify-content-center gap-3">
-            <div class="card justify-content-center" style="min-height: 285px; width: 575px">
+            <!-- <div class="card justify-content-center" style="min-height: 285px; width: 575px">
                 <div class="row g-0">
                     <div class="col-md-4">
                         <img src="" class="rounded-start" alt="..." />
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <!-- card 2 -->
-            <div class="card justify-content-center" style="min-height: 285px; width: 575px">
+            <!-- <div class="card justify-content-center" style="min-height: 285px; width: 575px">
                 <div class="row g-0">
                     <div class="col-md-4">
                         <img src="" class="rounded-start" alt="..." />
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <!-- card 3 -->
-            <div class="card justify-content-center" style="min-height: 285px; width: 575px">
+            <!-- <div class="card justify-content-center" style="min-height: 285px; width: 575px">
                 <div class="row g-0">
                     <div class="col-md-4">
                         <img src="" class="rounded-start" alt="..." />
@@ -89,54 +89,54 @@
                 </div>
             </div>
             <!-- card 4 -->
-            <div class="card justify-content-center" style="min-height: 285px; width: 575px">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="" class="rounded-start" alt="..." />
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Movie title</h5>
-                            <p class="card-text">
-                                Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <!-- <div class="card justify-content-center" style="min-height: 285px; width: 575px"> -->
+                <!-- <div class="row g-0"> -->
+                    <!-- <div class="col-md-4"> -->
+                        <!-- <img src="" class="rounded-start" alt="..." /> -->
+                    <!-- </div> -->
+                    <!-- <div class="col-md-8"> -->
+                        <!-- <div class="card-body"> -->
+                            <!-- <h5 class="card-title">Movie title</h5> -->
+                            <!-- <p class="card-text"> -->
+                                <!-- Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto? -->
+                            <!-- </p> --> 
+                        <!-- </div> --> 
+                    <!-- </div> -->
+                <!-- </div> -->
+            <!-- </div> -->
             <!-- card 5 -->
-            <div class="card justify-content-center" style="min-height: 285px; width: 575px">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="" class="rounded-start" alt="..." />
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Movie title</h5>
-                            <p class="card-text">
-                                Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <!-- <div class="card justify-content-center" style="min-height: 285px; width: 575px"> -->
+                <!-- <div class="row g-0"> -->
+                    <!-- <div class="col-md-4"> -->
+                        <!-- <img src="" class="rounded-start" alt="..." /> -->
+                    <!-- </div> -->
+                    <!-- <div class="col-md-8"> -->
+                        <!-- <div class="card-body"> -->
+                            <!-- <h5 class="card-title">Movie title</h5> -->
+                            <!-- <p class="card-text"> -->
+                                <!-- Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto? -->
+                            <!-- </p> -->
+                        <!-- </div> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+            <!-- </div> -->
             <!-- card 6 -->
-            <div class="card justify-content-center" style="min-height: 285px; width: 575px">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="" class="rounded-start" alt="..." />
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Movie title</h5>
-                            <p class="card-text">
-                                Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+            <!-- <div class="card justify-content-center" style="min-height: 285px; width: 575px"> -->
+                <!-- <div class="row g-0"> -->
+                    <!-- <div class="col-md-4"> -->
+                        <!-- <img src="" class="rounded-start" alt="..." /> -->
+                    <!-- </div> -->
+                    <!-- <div class="col-md-8"> -->
+                        <!-- <div class="card-body"> -->
+                            <!-- <h5 class="card-title">Movie title</h5> -->
+                            <!-- <p class="card-text"> -->
+                                <!-- Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto? -->
+                            <!-- </p> -->
+                        <!-- </div> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+            <!-- </div> --> 
+        <!-- </section> -->
 
         <!-- Modal -->
         <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
